larm-doms-exporter-1.0.19 released 2019-01-04:
  * Add new element to metadata for specifying if program is radio or tv
  * Add changelog and readme to tar-ball

larm-doms-exporter-1.0.18 released 2018-10-17:
  * Add more channels to whitelist and channelmapping
  * Add possibility to run consumer application without the significant change check

larm-doms-exporter-1.0.17 released 2018-09-06:
  * Remove possibility to export records with unknown channel

larm-doms-exporter-1.0.16 released 2018-09-06:
  * Stop retrieving channelName from unreliable database table

larm-doms-exporter-1.0.15 released 2018-08-31:
  * Move logger warning into correct context

larm-doms-exporter-1.0.14 released 2018-08-31:
  * Fix programBroadcast xpath

larm-doms-exporter-1.0.13 released 2018-08-30:
  * Fix programBroadcast namespace context

larm-doms-exporter-1.0.12 released 2018-08-30:
  * Don't require whitelist and blacklist for consumer

larm-doms-exporter-1.0.11 released 2018-08-29:
  * Fix issue, where a '$' sign in the metadata could break the xml transformation

larm-doms-exporter-1.0.10 released 2018-08-23:
  * Add script for getting ids of records with unknown channel
  * Add possibility to specify record ids for the producer

larm-doms-exporter-1.0.09 released 2018-08-22:
  * Move project to proper namespace

larm-doms-exporter-1.0.08 released 2018-08-21:
  * Use whitelist and blacklist to decide which records to export
  * Give a warning if records have unknown channel
