@@ -92,3 +92,4 @@
 "Kaos TV"
 "Canal International"
 "TVS - Den Danske Sportskanal"
+"xee"
