@@ -1,3 +1,6 @@
+larm-doms-exporter-1.0.20 released 2019-01-28:
+  * Add new channel Xee to channelmapping and whitelist
+
 larm-doms-exporter-1.0.19 released 2019-01-04:
   * Add new element to metadata for specifying if program is radio or tv
   * Add changelog and readme to tar-ball
